--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<app-seminarraum></app-seminarraum>
-<app-footer></app-footer>
+<div class="container">
+  <app-header></app-header>
+  <app-seminarraum></app-seminarraum>
+  <app-footer></app-footer>
+</div>
