updated header component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<ul>
+    <li><a class="active">Home</a></li>
+    <li><a href="/seminarraum"></a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="https://www.adesso.de" target="_blank">Adesso</a></li>
+</ul>
