added image 'adesso-log.svg.png' and updated header html component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,5 +2,5 @@
     <li><a class="active">Home</a></li>
     <li><a href="/seminarraum"></a></li>
     <li><a href="/about">About</a></li>
-    <li><a href="https://www.adesso.de" target="_blank">Adesso</a></li>
+    <a href="https://www.adesso.de" target="_blank"><img src="assets/img/adesso-log.svg.png" width="150" height="50"></a>
 </ul>
