--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -1,1 +1,17 @@
-<p>seminarraum works!</p>
+<table class="table table-bordered table-striped">
+    <thead>
+        <tr>
+            <th>Raumnummer</th>
+            <th>MaximalePersonenanzahl</th>
+            <th>Ausstattung</th>
+            <td></td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let seminarraum of seminarraums">
+            <td>{{seminarraum?.raumnummer}}</td>
+            <td>{{seminarraum?.maximalePersonenanzahl}}</td>
+            <td>{{seminarraum?.ausstattung}}</td>
+        </tr>
+    </tbody>
+</table>
