--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -1,3 +1,17 @@
+<h5 class="text text-dark">Einen neuen Raum hinzufügen</h5>
+<form>
+    <div>
+        <label for="maximalePersonenanzahl">MaximalePersonenanzahl</label>
+        <input type="number" class="form-control" id="maximalePersonenanzahl" placeholder="maximalePersonenanzahl">
+    </div>
+
+    <div>
+        <label for="ausstattung">Ausstattung</label>
+        <input type="text" class="form-control" id="ausstattung" placeholder="ausstattung">
+    </div>
+    <button class="mt-2 btn btn-sm btn-primary m-2">Speichern</button> <button class="mt-2 m-2 btn btn-sm btn-dark">Abbrechen</button>
+</form>
+<br>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
