refactored: renmaed method: 'onToggleModal'

--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -36,7 +36,7 @@
             <td>{{seminarraum?.maximalePersonenanzahl}}</td>
             <td>{{seminarraum?.ausstattung}}</td>
             <td>
-                <button (click)="onDeleteModal(seminarraum)" class="btn btn-sm btn-outline-danger" type="button" data-toggle="modal" data-target="#deleteModal">Löschen</button>
+                <button (click)="onToggleModal(seminarraum)" class="btn btn-sm btn-outline-danger" type="button" data-toggle="modal" data-target="#deleteModal">Löschen</button>
             </td>
         </tr>
     </tbody>
