--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -53,11 +53,11 @@
         </button>
     </div>
     <div class="modal-body">
-        Wollen Sie den Seminarraum <span class="text-white text-bg-danger">{{deSeminarraum.name}} </span> löschen? 
+        Wollen Sie den Seminarraum <span class="text-white text-bg-danger">{{onToggleSeminarraum.name}} </span> löschen? 
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
-        <button type="submit" (click)="deleteSeminarraum(deSeminarraum.raumnummer)" class="btn btn-primary" data-dismiss="modal">Löschen</button>
+        <button type="submit" (click)="deleteSeminarraum(onToggleSeminarraum.raumnummer)" class="btn btn-primary" data-dismiss="modal">Löschen</button>
     </div>
     </div>
 </div>
