--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -46,6 +46,48 @@
     </tbody>
 </table>
 
+<!-- Edit Modal -->
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Edit</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form #editForm = "ngForm">
+                <div>
+                    <input type="hidden" ngModel = {{onToggleSeminarraum.raumnummer}} name="raumnummer" class="form-control" id="raumnummer" placeholder="raumnummer" required="">
+                </div>
+
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" ngModel = {{onToggleSeminarraum.name}} name="name" class="form-control" id="name" placeholder="name" required="">
+                </div>
+            
+                <div>
+                    <label for="maximalePersonenanzahl">MaximalePersonenanzahl</label>
+                    <input type="number" ngModel = {{onToggleSeminarraum.maximalePersonenanzahl}} name="maximalePersonenanzahl" class="form-control" id="maximalePersonenanzahl" placeholder="maximalePersonenanzahl" required="">
+                </div>
+            
+                <div>
+                    <label for="ausstattung">Ausstattung</label>
+                    <input type="text" ngModel = {{onToggleSeminarraum.ausstattung}} name="ausstattung" class="form-control" id="ausstattung" placeholder="ausstattung" required="">
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+                    <button (click)="onEditeSeminarraum(editForm)" type="submit"  class="btn btn-primary" data-dismiss="modal">Speichern</button>
+                </div>
+            </form>
+        </div>
+    
+        </div>
+    </div>
+</div>
+
 <!-- Delete Modal -->
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 <div class="modal-dialog" role="document">
