set id for Table 'seminarraums'

--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -19,7 +19,8 @@
 </form>
 
 <br>
-<table class="table table-bordered table-striped">
+
+<table class="table table-bordered table-striped" id="seminarraumTable">
     <thead>
         <tr>
             <th>Raumnummer</th>
