added click Event 'sortTable()' in 'SeminarraumComponent'

--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -19,7 +19,7 @@
 </form>
 
 <br>
-
+<button (click)="sortTable()" class="btn btn-sm btn-outline-dark">Sort nach Raumnummer</button>
 <table class="table table-bordered table-striped" id="seminarraumTable">
     <thead>
         <tr>
