updated 'seminarList' table

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -1,7 +1,7 @@
-<table class="table table-borderes table-striped">
+<table class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th>Seminarnummer</th>
+            <th>SeminarNr.</th>
             <th>SeminarTitle</th>
             <th>Beginn</th>
             <th>Ende</th>
