updated Delete Modal in 'seminarraum.component.html'

--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -99,7 +99,10 @@
         </button>
     </div>
     <div class="modal-body">
-        Wollen Sie den Seminarraum <span class="text-white text-bg-danger">{{onToggleSeminarraum.name}} </span> löschen? 
+        Wollen Sie den Seminarraum <span class="text-bg-dark">{{onToggleSeminarraum.name}} </span>&nbsp; löschen?
+        <br><br>
+        <span class="text-bg-dark">Warnung:</span>&nbsp;<span class="text text-bg-danger">Alle Seminare in diesem Raum werden auch mitgelöscht</span>
+
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
