updated Delete Modal with 'Warnung' in 'seminar.component.html'

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -43,7 +43,10 @@
             </button>
         </div>
         <div class="modal-body">
-            Wollen Sie das Seminar <span class="text-dark text-secondary">{{onToggleSeminar?.seminarTitle}} </span> löschen? 
+            Wollen Sie das Seminar <span class="text-dark text-secondary">{{onToggleSeminar?.seminarTitle}} </span>&nbsp; löschen? 
+            <br><br>
+            <span class="text-bg-dark">Warnung:</span>&nbsp;<span class="text text-bg-danger">Alle Buchungen in diesem Seminar werden auch mitgelöscht</span>
+
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
