--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -43,7 +43,7 @@
             </button>
         </div>
         <div class="modal-body">
-            Wollen Sie das Seminar <span class="text-dark text-secondary">{{onToggleSeminar?.seminarTitle}} </span>&nbsp; löschen? 
+            Wollen Sie das Seminar <span class="text-bg-dark">{{onToggleSeminar?.seminarTitle}} </span>&nbsp; löschen? 
             <br><br>
             <span class="text-bg-dark">Warnung:</span>&nbsp;<span class="text text-bg-danger">Alle Buchungen in diesem Seminar werden auch mitgelöscht</span>
 
