--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#addSeminarModal">Ein neues Seminar hinzufügen</button>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
