--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -56,4 +56,66 @@
         </div>
     </div>
 </div>
+
+<!-- Add Modal -->
+<div class="modal fade" id="addSeminarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <!-- modal-content -->
+        <div class="modal-content">
+        <!-- modal-header -->
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Delete</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <!-- modal-body -->
+        <div class="modal-body">
+            <form #addForm="ngForm" (ngSubmit)="onAddSeminar(addForm)">
+                <div>
+                    <label for="add-seminarnummer"></label>
+                    <input type="hidden" ngModel name="seminarnummer" class="form-control" id="add-seminarnummer">
+                </div>
+                <div>
+                    <label for="add-seminarTitle">SeminarTitle</label>
+                    <input type="text" ngModel name="seminarTitle" class="form-control" id="add-seminarTitle">
+                </div>
+                <div>
+                    <label for="add-beginn">Beginn</label>
+                    <input type="datetime-local" ngModel name="beginn" class="form-control" id="add-beginn">
+                </div>
+                <div>
+                    <label for="add-ende">Ende</label>
+                    <input type="datetime-local" ngModel name="ende" class="form-control" id="add-ende">
+                </div>
+                <div>
+                    <label for="add-kursinhalt">Kursinhalt</label>
+                    <input type="text" ngModel name="kursinhalt" class="form-control" id="add-kursinhalt">
+                </div>
+                <div>
+                    <label for="add-teilnehmeranzahl">Teilnehmeranzahl</label>
+                    <input type="number" ngModel name="teilnehmeranzahl" class="form-control" id="add-teilnehmeranzahl">
+                </div>
+                <div>
+                    <label for="add-seminarleiter">Seminarleiter</label>
+                    <input type="text" ngModel name="seminarleiter" class="form-control" id="add-seminarleiter">
+                </div>
+                <div>
+                    <label for="add-voraussetzung">Voraussetzung</label>
+                    <input type="text" ngModel name="voraussetzung" class="form-control" id="add-voraussetzung">
+                </div>
+                <div>
+                    <label for="add-seminarraum">Raumnummer</label>
+                    <input type="text" ngModel name="seminarraum.raumnummer" class="form-control" id="add-seminarraum">
+                </div>
+                <!-- modal-footer -->
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Hinzufügen</button>
+                </div>
+            </form>
+        </div>
+        
+        </div>
+    </div>
+</div>
     
