set values of select and options in 'seminar.component.ts'

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -107,7 +107,7 @@
                 <div>
                     <label for="add-seminarraum">Raumnummer</label>
                     <select name="seminarraum" id="seminarraum">
-                        <option *ngFor="let seminar of seminars">
+                        <option *ngFor="let seminar of seminarraums">
                             {{seminar.raumnummer}}
                         </option>
                     </select>
