updated select and Value of option in 'seminar.component.html'

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -107,8 +107,9 @@
                 <div>
                     <label for="add-seminarraum">Raumnummer</label><br>
                     <select ngModel name="seminarraum" id="seminarraum">
-                        <option *ngFor="let seminar of seminarraums">
-                            {{seminar.raumnummer}}
+                        <option *ngFor="let seminarraum of seminarraums"
+                        value="{seminarnummer: {{seminarraum.raumnummer}}, name: '{{seminarraum.name}}', maximalePersonenanzahl: {{seminarraum.maximalePersonenanzahl}}, ausstattung: '{{seminarraum.ausstattung}}'}">
+                            {{seminarraum.raumnummer}}
                         </option>
                     </select>
                 </div>
