--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -115,7 +115,7 @@
                 </div>
                 <!-- modal-footer -->
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Hinzufügen</button>
+                    <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Hinzufügen</button>
                 </div>
             </form>
         </div>
