deleted data-dismiss in 'seminar.component.html

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -182,7 +182,7 @@
                 </div>
                 <!-- modal-footer -->
                 <div class="modal-footer">
-                    <button [disabled]="editeForm.invalid" type="submit" class="btn btn-primary" data-dismiss="modal">Speicher</button>
+                    <button [disabled]="editeForm.invalid" type="submit" class="btn btn-primary">Speicher</button>
                 </div>
             </form>
         </div>
