--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -10,7 +10,7 @@
             <th>Teilnehmeranzahl</th>
             <th>Seminarleiter</th>
             <th>Voraussetzung</th>
-            <th>Raumnummer</th>
+            <th>Seminrraum</th>
             <th></th>
             <th></th>
         </tr>
@@ -25,7 +25,7 @@
             <td>{{seminar.teilnehmeranzahl}}</td>
             <td>{{seminar.seminarleiter}}</td>
             <td>{{seminar.voraussetzung}}</td>
-            <td>{{seminar.seminarraum?.raumnummer}}</td>
+            <td>{{seminar?.seminarraum?.raumnummer}}</td>
             <td><button (click)="onToggleModal(seminar)" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#editeSeminarModal">Bearbeiten</button></td>
             <td><button (click)="onToggleModal(seminar)" type="button" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#deleteModal">Löschen</button></td>
         </tr>
