changed the name of attribute 'Raumnummer'

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -10,7 +10,7 @@
             <th>Teilnehmeranzahl</th>
             <th>Seminarleiter</th>
             <th>Voraussetzung</th>
-            <th>Seminrraum</th>
+            <th>Raumnummer</th>
             <th></th>
             <th></th>
         </tr>
