--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -74,7 +74,7 @@
             <form #addForm="ngForm" (ngSubmit)="onAddSeminar(addForm)">
                 <div>
                     <label for="add-seminarnummer"></label>
-                    <input type="hidden" ngModel name="seminarnummer" class="form-control" id="add-seminarnummer" required="">
+                    <input type="hidden" ngModel name="seminarnummer" class="form-control" id="add-seminarnummer">
                 </div>
                 <div>
                     <label for="add-seminarTitle">SeminarTitle</label>
