updated editeModal in 'seminar.component.ts'

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -175,7 +175,7 @@
                     <label for="add-seminarraum">Raumnummer</label><br>
                     <select ngModel name="seminarraum" id="seminarraum" required="">
                         <option *ngFor="let seminarraum of seminarraums"
-                        value="{seminarnummer: {{seminarraum.raumnummer}}, name: '{{seminarraum.name}}', maximalePersonenanzahl: {{seminarraum.maximalePersonenanzahl}}, ausstattung: '{{seminarraum.ausstattung}}'}">
+                        value={{seminarraum.raumnummer}}>
                             {{seminarraum.raumnummer}}
                         </option>
                     </select>
