added css class to emelments 'select' in modals

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -106,7 +106,7 @@
                 </div>
                 <div>
                     <label for="add-seminarraum">Raumnummer</label><br>
-                    <select ngModel name="seminarraum" id="seminarraum" required="">
+                    <select ngModel name="seminarraum" id="seminarraum" class="form-control" required="">
                         <option *ngFor="let seminarraum of seminarraums"
                         value={{seminarraum.raumnummer}}>
                             {{seminarraum.raumnummer}}
@@ -173,7 +173,7 @@
                 </div>
                 <div>
                     <label for="add-seminarraum">Raumnummer</label><br>
-                    <select ngModel name="seminarraum" id="seminarraum" required="">
+                    <select ngModel name="seminarraum" id="seminarraum" class="form-control" required="">
                         <option *ngFor="let seminarraum of seminarraums"
                         value={{seminarraum.raumnummer}}>
                             {{seminarraum.raumnummer}}
