--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,7 @@
 <ul>
     <li><a class="active" href="/">Home</a></li>
     <li><a href="/seminarraum">Seminarraum</a></li>
+    <li><a href="/buchung">Seminarbuchung</a></li>
     <li><a href="/about">About</a></li>
     <a href="https://www.adesso.de" target="_blank"><img src="assets/img/adesso-log.svg.png" width="150" height="50"></a>
 </ul>
