updated bg-color in 'seminarruam.component.html'

--- a/src/app/components/seminarraum/seminarraum.component.html
+++ b/src/app/components/seminarraum/seminarraum.component.html
@@ -101,7 +101,7 @@
     <div class="modal-body">
         Wollen Sie den Seminarraum <span class="text-bg-dark">{{onToggleSeminarraum.name}} </span>&nbsp; löschen?
         <br><br>
-        <span class="text-bg-dark">Warnung:</span>&nbsp;<span class="text text-bg-danger">Alle Seminare in diesem Raum werden auch mitgelöscht</span>
+        <span class="text-bg-danger">Warnung:</span>&nbsp;<span class="text text-dark">Alle Seminare in diesem Raum werden auch mitgelöscht</span>
 
     </div>
     <div class="modal-footer">
