updated bg-color in 'DeleteModal' in 'seminar.component.html'

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -46,7 +46,7 @@
         <div class="modal-body">
             Wollen Sie das Seminar <span class="text-bg-dark">{{onToggleSeminar.seminarTitle}} </span>&nbsp; löschen? 
             <br><br>
-            <span class="text-bg-dark">Warnung:</span>&nbsp;<span class="text text-bg-danger">Alle Buchungen in diesem Seminar werden auch mitgelöscht</span>
+            <span class="text-bg-danger">Warnung:</span>&nbsp;<span class="text text-dark">Alle Buchungen in diesem Seminar werden auch mitgelöscht</span>
 
         </div>
         <div class="modal-footer">
