--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -2,7 +2,7 @@
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th>SeminarNr.</th>
+            <th>SeminarNr</th>
             <th>SeminarTitle</th>
             <th>Beginn</th>
             <th>Ende</th>
@@ -10,7 +10,7 @@
             <th>Teilnehmeranzahl</th>
             <th>Seminarleiter</th>
             <th>Voraussetzung</th>
-            <th>Raumnummer</th>
+            <th>RaumNr</th>
             <th></th>
             <th></th>
             <th></th>
