added cancele buttons to EditeModal & AddModal

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -117,6 +117,7 @@
                 </div>
                 <!-- modal-footer -->
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
                     <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary">Hinzufügen</button>
                 </div>
             </form>
@@ -184,6 +185,7 @@
                 </div>
                 <!-- modal-footer -->
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
                     <button [disabled]="editeForm.invalid" type="submit" class="btn btn-primary">Speicher</button>
                 </div>
             </form>
