--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,1 @@
-<p class="text text-center text-muted">&copy; Adesso Seminar Management 2022</p>
+<p class="text text-center text-muted">&copy;Seminar Management 2022</p>
