added new css class to 'AboutComponent'

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,1 @@
-<p>Diese Full Stack Webanwendung wurde von Software Engineer <span class="text text-muted">Parwand Alsino</span> entwickelt</p>
+<p>Diese Full Stack Webanwendung wurde von Software Engineer <span class="font">Parwand Alsino</span> entwickelt</p>
